--- a/Mp3/Mp3.Core/Mp3.Core.csproj
+++ b/Mp3/Mp3.Core/Mp3.Core.csproj
@@ -34,6 +34,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="App.cs" />
     <Compile Include="Models\Messanger\MyMessageModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\DataMusic.cs" />
