Work without bug play music

--- a/Mp3/Mp3.Core/Mp3.Core.csproj
+++ b/Mp3/Mp3.Core/Mp3.Core.csproj
@@ -42,6 +42,7 @@
     <Compile Include="Services\IDataService.cs" />
     <Compile Include="Services\IPlayMusicService.cs" />
     <Compile Include="Services\ISoungsManagerService.cs" />
+    <Compile Include="ViewModels\IMusicListViewModel.cs" />
     <Compile Include="ViewModels\MusicListViewModel.cs" />
     <Compile Include="ViewModels\PlayerViewModel.cs" />
   </ItemGroup>
