--- a/Mp3/Mp3.Core/packages.config
+++ b/Mp3/Mp3.Core/packages.config
@@ -10,4 +10,5 @@
   <package id="SQLite.Net.Async-PCL" version="3.1.1" targetFramework="portable-net45+win+wpa81+MonoAndroid10+xamarinios10+MonoTouch10" />
   <package id="SQLite.Net.Core-PCL" version="3.1.1" targetFramework="portable-net45+win+wpa81+MonoAndroid10+xamarinios10+MonoTouch10" />
   <package id="SQLite.Net-PCL" version="3.1.1" targetFramework="portable-net45+win+wpa81+MonoAndroid10+xamarinios10+MonoTouch10" />
+  <package id="SQLitePCL" version="3.8.7.2" targetFramework="portable-net45+win+wpa81+MonoAndroid10+xamarinios10+MonoTouch10" />
 </packages>
