--- a/Mp3/Mp3.Droid/Mp3.Droid.csproj
+++ b/Mp3/Mp3.Droid/Mp3.Droid.csproj
@@ -83,6 +83,7 @@
     <Compile Include="LinkerPleaseInclude.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\DroidGetMediInfo.cs" />
     <Compile Include="Services\DroidPlayMusicService.cs" />
     <Compile Include="Services\DroidSoungsManagerService.cs" />
     <Compile Include="Services\FileExtensionFilter.cs" />
