work with some bug play list music

--- a/Mp3/Mp3.Core/packages.config
+++ b/Mp3/Mp3.Core/packages.config
@@ -4,6 +4,7 @@
   <package id="MvvmCross.Binding" version="4.0.0" targetFramework="portable-net45+win+wpa81+MonoAndroid10+xamarinios10+MonoTouch10" />
   <package id="MvvmCross.Core" version="4.0.0" targetFramework="portable-net45+win+wpa81+MonoAndroid10+xamarinios10+MonoTouch10" />
   <package id="MvvmCross.HotTuna.Plugin.SQLite" version="4.0.0" targetFramework="portable-net45+win+wpa81+MonoAndroid10+xamarinios10+MonoTouch10" />
+  <package id="MvvmCross.HotTuna.Plugin.SQLitePCL" version="4.0.0" targetFramework="portable-net45+win+wpa81+MonoAndroid10+xamarinios10+MonoTouch10" />
   <package id="MvvmCross.Platform" version="4.0.0" targetFramework="portable-net45+win+wpa81+MonoAndroid10+xamarinios10+MonoTouch10" />
   <package id="MvvmCross.Plugin.Messenger" version="4.0.0" targetFramework="portable-net45+win+wpa81+MonoAndroid10+xamarinios10+MonoTouch10" />
   <package id="MvvmCross.Plugin.SQLitePCL" version="4.0.0" targetFramework="portable-net45+win+wpa81+MonoAndroid10+xamarinios10+MonoTouch10" />
