--- a/Mp3/Mp3.Droid/Mp3.Droid.csproj
+++ b/Mp3/Mp3.Droid/Mp3.Droid.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Bootstrap\SqlitePluginBootstrap.cs" />
     <Compile Include="DebugTrace.cs" />
     <Compile Include="LinkerPleaseInclude.cs" />
+    <AndroidResource Include="Resources\layout\PlayListsView.axml" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\DroidGetMediInfo.cs" />
@@ -110,8 +111,10 @@
     <Compile Include="Services\FileExtensionFilter.cs" />
     <Compile Include="Setup.cs" />
     <Compile Include="SplashScreen.cs" />
+    <Compile Include="Views\AddPlayListView.cs" />
     <Compile Include="Views\MusicListView.cs" />
     <Compile Include="Views\PlayerView.cs" />
+    <Compile Include="Views\PlayListsView.cs" />
     <Compile Include="Views\TestView.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -124,6 +127,15 @@
     <AndroidResource Include="Resources\layout\PlayerView.axml" />
     <AndroidResource Include="Resources\layout\SplashScreen.axml" />
     <AndroidResource Include="Resources\layout\TestView.axml">
+      <SubType>AndroidResource</SubType>
+    </AndroidResource>
+    <AndroidResource Include="Resources\layout\List_PlayLists.axml">
+      <SubType>AndroidResource</SubType>
+    </AndroidResource>
+    <AndroidResource Include="Resources\layout\AddPlayListView.axml">
+      <SubType>AndroidResource</SubType>
+    </AndroidResource>
+    <AndroidResource Include="Resources\layout\List_ForPlaylist.axml">
       <SubType>AndroidResource</SubType>
     </AndroidResource>
   </ItemGroup>
