--- a/Mp3/Mp3.Core/Mp3.Core.csproj
+++ b/Mp3/Mp3.Core/Mp3.Core.csproj
@@ -45,11 +45,13 @@
     <Compile Include="Services\ISoungsManagerService.cs" />
     <Compile Include="Services\PlayList.cs" />
     <Compile Include="Services\PlayListService.cs" />
-    <Compile Include="ViewModels\AddPlayListViewModel.cs" />
+    <Compile Include="ViewModels\AddPLViewModel.cs" />
+    <Compile Include="ViewModels\EditPLViewModel.cs" />
     <Compile Include="ViewModels\IGetMediaInfo.cs" />
     <Compile Include="ViewModels\MusicListViewModel.cs" />
     <Compile Include="ViewModels\PlayerViewModel.cs" />
-    <Compile Include="ViewModels\PlayListsViewModel.cs" />
+    <Compile Include="ViewModels\PLsViewModel.cs" />
+    <Compile Include="ViewModels\PLViewModel.cs" />
     <Compile Include="ViewModels\TestViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
